--- a/zanbil/Cargo.toml
+++ b/zanbil/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 clap = { version = "4.5.45", features = ["derive"] }
+directories = "6.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.9.5"
 toml_edit = "0.23.4"
+
+[features]
+use-local = []
