--- a/zanbil-build/Cargo.toml
+++ b/zanbil-build/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 build-rs = "0.3.1"
 cc = "1.2.34"
 fs_extra = "1.3.0"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.9.5"
 walkdir = "2.5.0"
